# qucompcpp

./: .gitignore  CHANGELOG.md  LICENCE.txt  Makefile  README.md  half_adder  qucomp.qg  qucomp.qu
include/: commands.h  compiler.h  compilerContext.h  matrix.h  operators.h  parser.h  processContext.h  processor.h  qubit.h  qugates.h  qumocks.h  qusyntax.h  sourceContext.h  syntaxBuilder.h  syntaxRules.h  testUnit.h  token.h  tokenProducer.h  tokenizer.h  values.h  vectutils.h  version.h.in
src/: CMakeLists.txt  bra.cpp  commands.cpp  compiler.cpp  ket.cpp  main.cpp  matrix.cpp  matrix1.cpp  operators.cpp  parser.cpp  processor.cpp  qugates.cpp  qusyntax.cpp  sourceContext.cpp  syntaxBuilder.cpp  syntaxRules.cpp  testCompiler.cpp  testMatrix.cpp  testOperators.cpp  testProcessor.cpp  testQusyntax.cpp  testSyntaxBuilder.cpp  testToken.cpp  testTokenizer.cpp  tests.cpp  token.cpp  tokenizer.cpp  tokenizer1.cpp  values.cpp  vectutils.cpp
